--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -26,13 +26,14 @@
     {
       "category": "Design Engineering|Product Design",
       "imgSrc": "./assets/images/projects/ShiftPixy/op_AR_activation.png",
-      "imgAlt": "AR Activation",
+      "imgAlt": "AR Activation Project at ShiftPixy",
       "title": "AR Activation",
       "categoryText": "Design Engineering",
-      "description": "To Be Updated Soon",
+      "description": "AR Activation Project at ShiftPixy: I transformed everyday workspaces into immersive AR environments using Spark AR Studio. These captivating experiences brought company mascots and characters to life. Through target tracking, the characters would spring into action, interacting with users whenever specific images were detected by the camera.",
       "date": "2024-06-14", 
       "additionalImages": [
- 
+        "./assets/images/projects/ShiftPixy/shiftpixy_office.png",
+        "./assets/images/projects/ShiftPixy/AR_activation.gif"
       ]
     },
     {
@@ -64,10 +65,12 @@
       "imgAlt": "ShiftPixy Animation + Game",
       "title": "ShiftPixy Animation + Game",
       "categoryText": "Product Design",
-      "description": "To Be Updated Soon",
+      "description": "Developed during my time at ShiftPixy Labs, “Clukin Lucky” is an endless runner game crafted for a collaborative brand partnership. Positioned as a captivating blend of adrenaline-pumping gameplay and brand promotion, this game invites players to embark on ceaseless chases, overcoming obstacles and collecting in-game items.",
       "date": "2024-06-14", 
       "additionalImages": [
-        
+        "./assets/images/projects/ShiftPixy/op_clukin_luck_game.gif",
+        "./assets/images/projects/ShiftPixy/op_clukin_luck_animation.gif"
+
       ]
     },
     {
