--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -85,7 +85,7 @@
       "imgSrc": "./assets/images/projects/op_SunWaterPlus.png",
       "imgAlt": "SunWater Plus",
       "title": "SunWater Plus",
-      "categoryText": "Product Design",
+      "categoryText": "Pending publishment due to confidentiality",
       "description": "SunWater Plus is a sustainable water filtration system designed to harness solar energy for water purification. By integrating solar panels and advanced filtration technology, it provides clean drinking water efficiently and eco-consciously. The system includes an AR feature for easy panel installation and filter replacement, ensuring optimal performance and user convenience. SunWater Plus aims to address water scarcity and promote sustainable living by leveraging renewable energy sources and innovative design.",
       "date": "2024-06-14", 
       "additionalImages": [
