--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -1,6 +1,6 @@
 [
     {
-      "category": "Design Engineering|Product Design",
+      "category": "Design Engineering",
       "imgSrc": "./assets/images/projects/op_heart_sync.png",
       "imgAlt": "HeartSync",
       "title": "HeartSync",
@@ -28,7 +28,7 @@
         ]
       },
     {
-      "category": "Design Engineering",
+      "category": "XR",
       "imgSrc": "./assets/images/projects/ShiftPixy/op_AR_activation.png",
       "imgAlt": "AR Activation Project at ShiftPixy",
       "title": "AR Activation",
@@ -41,7 +41,7 @@
       ]
     },
     {
-      "category": "Design Engineering",
+      "category": "XR",
       "imgSrc": "./assets/images/projects/Innovative_design/VR_O.png",
       "imgAlt": "XR Ophthalmoscopy Simulator",
       "title": "XR Ophthalmoscopy Simulator",
@@ -67,11 +67,11 @@
       ]
     },
     {
-      "category": "Product Design",
+      "category": "XR",
       "imgSrc": "./assets/images/projects/ShiftPixy/op_clukin_lucky.png",
       "imgAlt": "ShiftPixy Animation + Game",
       "title": "ShiftPixy Animation + Game",
-      "categoryText": "Product Design",
+      "categoryText": "AR",
       "description": "Developed during my time at ShiftPixy Labs, “Clukin Lucky” is an endless runner game crafted for a collaborative brand partnership. Positioned as a captivating blend of adrenaline-pumping gameplay and brand promotion, this game invites players to embark on ceaseless chases, overcoming obstacles and collecting in-game items.",
       "date": "2024-06-14", 
       "additionalImages": [
@@ -81,7 +81,7 @@
       ]
     },
     {
-      "category": "Product Design",
+      "category": "Design Engineering",
       "imgSrc": "./assets/images/projects/op_SunWaterPlus.png",
       "imgAlt": "SunWater Plus",
       "title": "SunWater Plus",
@@ -93,7 +93,7 @@
       ]
     },
     {
-      "category": "Product Design",
+      "category": "Design Engineering",
       "imgSrc": "./assets/images/projects/op_AI_chatbot.png",
       "imgAlt": "AI Chatbot (Medidish)",
       "title": "Medidish (AI Chatbot)",
@@ -105,7 +105,7 @@
       ]
     },
     {
-      "category": "Design Engineering",
+      "category": "XR",
       "imgSrc": "./assets/images/projects/Innovative_design/op_MR_boba.png",
       "imgAlt": "Mix reality - Boba Making Experience",
       "title": "Mix reality - Boba Making Experience",
@@ -118,7 +118,7 @@
       ]
     },
     {
-      "category": "Design Engineering",
+      "category": "XR",
       "imgSrc": "./assets/images/projects/XR/op_PuzzleNow.png",
       "imgAlt": "Puzzle Now",
       "title": "Puzzle Now",
@@ -143,6 +143,24 @@
         "./assets/images/projects/TechnicalArt/PP_1.png",
         "./assets/images/projects/TechnicalArt/PP_2.png",
         "./assets/images/projects/TechnicalArt/PP_3.png"
+      ]
+    }
+    ,{
+      "category": "Technical Art",
+      "imgSrc": "./assets/images/projects/TechnicalArt/op_3D.png",
+      "imgAlt": "3D art ",
+      "title": "3D | Interactive Art",
+      "categoryText": "3D art for fun",
+      "description": "Check out more work on Instagram: @Blender_3D_yun. I've also posted a few 2D drawings there.",
+      "date": "2024-4-10", 
+      "additionalImages": [
+        "./assets/images/projects/TechnicalArt/drawing_cats.jpg",
+        "./assets/images/projects/TechnicalArt/self.png",
+        "./assets/images/projects/TechnicalArt/geko.png",
+        "./assets/images/projects/TechnicalArt/earring.gif",
+        "./assets/images/projects/TechnicalArt/Imgto3D.gif",
+        "./assets/images/projects/TechnicalArt/Jar.gif",
+        "./assets/images/projects/TechnicalArt/poolwater.gif"
       ]
     }
     
